--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "oas3-tools-with-cors",
-  "version": "2.2.4",
+  "name": "oas3-tools-cors",
+  "version": "2.2.9",
   "description": "Swagger-UI and API Rest Routing for Open API v3.",
   "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist/ && tsc && cp -R src/middleware/swagger-ui dist/middleware/swagger-ui"
   },
   "author": {
-    "name": "Hugo Mercado",
-    "email": "hugo.mario.mercado@gmail.com",
-    "url": "https://github.com/HugoMario"
+    "name": "Avi Kapuya",
+    "email": "akapuya@gmail.com",
+    "url": "https://github.com/akapuya"
   },
   "bugs": {
     "url": "https://github.com/akapuya/oas3-tools-with-cors/issues"
@@ -34,8 +34,8 @@
     "async": "^2.6.3",
     "body-parser": "1.19.0",
     "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "serve-static": "^1.14.1",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.4.3",
     "js-yaml": "^3.13.1",
@@ -44,8 +44,7 @@
     "multer": "^1.4.2",
     "parseurl": "^1.3.3",
     "path-to-regexp": "^3.2.0",
-    "qs": "^6.9.1",
-    "serve-static": "^1.14.1"
+    "qs": "^6.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
@@ -57,6 +56,7 @@
     "@types/serve-static": "^1.13.3",
     "awesome-typescript-loader": "^5.2.1",
     "source-map-loader": "^0.2.4",
+    "supertest": "^5.0.0",
     "ts-node": "^8.3.0",
     "tsc": "^1.20150623.0",
     "typescript": "^3.7.2"
